@@ -8,8 +8,9 @@ SimGrid (3.9) NOT RELEASED; urgency=low
  * New function: MSG_process_get_number()
 
  XBT:
- * kill synchronized dynars. We cannot think of a usecase where it's
-   really mandatory, and maintaining it was a pain in our codebase.
+ * Kill synchronized dynars, and xbt_dynar_dopar(). We cannot think of a
+   usecase where it's really mandatory, and maintaining it was a pain in
+   our codebase.
 
  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
